# global-hackathon-v1

./: .hackathon-start  pyproject.toml
frontend/: run.py
frontend/streamlit_app/: main.py
frontend/streamlit_app/pages/: agent_status.py  results_display.py  task_input.py  workflow_monitor.py
src/agent_orchestrator/agents/: analysis_agent.py  decision_agent.py  research_agent.py
src/agent_orchestrator/api/: main.py  models.py
src/agent_orchestrator/api/routers/: agent_router.py  health_router.py  orchestrate_router.py
src/agent_orchestrator/core/: agent_manager.py  state_manager.py  task_router.py  workflow_engine.py
src/agent_orchestrator/db/: database.py  models.py  operations.py
src/agent_orchestrator/services/: huggingface_service.py
